5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1675_1932.log
== TEST (2019-05-01 22:13:47) 
-- CODE:
a=float(input("distância entre os olhos, da Imagem 1: "))
b=float(input("distância entre o nariz e o queixo, da Imagem 1: "))
c=float(input("distância entre os olhos, da Imagem 2: "))
d=float(input("distância entre o nariz e o queixo, da Imagem 2: "))
e=float(input("distância entre os olhos, da Imagem 3: "))
f=float(input("distância entre o nariz e o queixo, da Imagem 3: "))
face1= abs()a/b



-- ERROR:
File "XXXX", line 7
    face1= abs()a/b
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:14:08) 
-- CODE:
a=float(input("distância entre os olhos, da Imagem 1: "))
b=float(input("distância entre o nariz e o queixo, da Imagem 1: "))
c=float(input("distância entre os olhos, da Imagem 2: "))
d=float(input("distância entre o nariz e o queixo, da Imagem 2: "))
e=float(input("distância entre os olhos, da Imagem 3: "))
f=float(input("distância entre o nariz e o queixo, da Imagem 3: "))
face1=a/b abs()



-- ERROR:
File "XXXX", line 7
    face1=a/b abs()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:23:41) 
-- CODE:
a=float(input("distância entre os olhos, da Imagem 1: "))
b=float(input("distância entre o nariz e o queixo, da Imagem 1: "))
c=float(input("distância entre os olhos, da Imagem 2: "))
d=float(input("distância entre o nariz e o queixo, da Imagem 2: "))
e=float(input("distância entre os olhos, da Imagem 3: "))
f=float(input("distância entre o nariz e o queixo, da Imagem 3: "))
face1=a/b
abs(face1)




-- ERROR:
File "XXXX", line 7
    face1=a/b abs()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:24:39) 
-- CODE:
a=float(input("distância entre os olhos, da Imagem 1: "))
b=float(input("distância entre o nariz e o queixo, da Imagem 1: "))
c=float(input("distância entre os olhos, da Imagem 2: "))
d=float(input("distância entre o nariz e o queixo, da Imagem 2: "))
e=float(input("distância entre os olhos, da Imagem 3: "))
f=float(input("distância entre o nariz e o queixo, da Imagem 3: "))
face1=(a/b)
abs(face1)




-- ERROR:
File "XXXX", line 7
    face1=a/b abs()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:25:15) 
-- CODE:
a=float(input("distância entre os olhos, da Imagem 1: "))
b=float(input("distância entre o nariz e o queixo, da Imagem 1: "))
c=float(input("distância entre os olhos, da Imagem 2: "))
d=float(input("distância entre o nariz e o queixo, da Imagem 2: "))
e=float(input("distância entre os olhos, da Imagem 3: "))
f=float(input("distância entre o nariz e o queixo, da Imagem 3: "))
face1=(a/b)
x=abs(face1)




-- ERROR:
File "XXXX", line 7
    face1=a/b abs()
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
